--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: java
 sudo: false
-jdk: oraclejdk7
+
+jdk:
+  - oraclejdk7
 
 install: true
-script: mvn verify -B -e -V
+script: ./travis.sh
+
+matrix:
+  fast_finish: true
 
 cache:
   directories:
