--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.sonarsource.orchestrator</groupId>
   <artifactId>orchestrator-parent</artifactId>
-  <version>3.4-SNAPSHOT</version>
+  <version>3.4</version>
   <packaging>pom</packaging>
   <name>Orchestrator :: Parent</name>
   <inceptionYear>2011</inceptionYear>
@@ -15,7 +15,7 @@
   </parent>
 
   <properties>
-    <surefire.argLine></surefire.argLine>
+    <surefire.argLine />
     <sonarWsClient.version>4.5</sonarWsClient.version>
     <httpclient.version>4.3.2</httpclient.version>
     <commonsIO.version>2.4</commonsIO.version>
@@ -43,7 +43,7 @@
     <connection>scm:git:git@github.com:SonarSource/sonar-orchestrator.git</connection>
     <developerConnection>scm:git:git@github.com:SonarSource/sonar-orchestrator.git</developerConnection>
     <url>https://github.com/SonarSource/sonar-orchestrator</url>
-    <tag>HEAD</tag>
+    <tag>3.4</tag>
   </scm>
 
   <build>
