--- a/orchestrator-maven-plugin/pom.xml
+++ b/orchestrator-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sonarsource.orchestrator</groupId>
     <artifactId>orchestrator-parent</artifactId>
-    <version>3.4</version>
+    <version>3.5-SNAPSHOT</version>
   </parent>
   <artifactId>orchestrator-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
