--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.sonarsource.orchestrator</groupId>
   <artifactId>orchestrator-parent</artifactId>
-  <version>3.4.1</version>
+  <version>3.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Orchestrator :: Parent</name>
   <inceptionYear>2011</inceptionYear>
@@ -43,7 +43,7 @@
     <connection>scm:git:git@github.com:SonarSource/sonar-orchestrator.git</connection>
     <developerConnection>scm:git:git@github.com:SonarSource/sonar-orchestrator.git</developerConnection>
     <url>https://github.com/SonarSource/sonar-orchestrator</url>
-    <tag>3.4.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
