--- a/sonar-orchestrator-osgi/pom.xml
+++ b/sonar-orchestrator-osgi/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.sonarsource.orchestrator</groupId>
     <artifactId>orchestrator-parent</artifactId>
-    <version>3.4.1</version>
+    <version>3.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>sonar-orchestrator-osgi</artifactId>
