--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 jdk: oraclejdk7
 
 install: true
-script: ./travis.sh
+script: mvn verify -B -e -V -Dmaven.test.redirectTestOutputToFile=false
 
 cache:
   directories:
