The tests rely on installed plugins

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 jdk: oraclejdk7
 
 install: true
-script: mvn verify -B -e -V -Dmaven.test.redirectTestOutputToFile=false
+script: mvn install -B -e -V -Dmaven.test.redirectTestOutputToFile=false
 
 cache:
   directories:
