--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: java
 sudo: false
 jdk: oraclejdk7
-
-install: mvn install -DskipTests=true
-script: mvn test -Dmaven.test.redirectTestOutputToFile=false
-
-cache:
-  directories:
-    - '$HOME/.m2/repository'
+install: true
+script: ./travis.sh
 
 notifications:
   email: false
