--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ env:
 
 notifications:
   email: false
+
+cache:
+  directories:
+    - $HOME/.m2/repository
+    # cache for Dory analysis
+    - $HOME/.sonar
