Added properties file for wallboard and releasability

--- a/.sonarsource.properties
+++ b/.sonarsource.properties
@@ -1,2 +1,8 @@
-# The wallboard to be used in SonarSource offices
+# Sonarsource meta data file for this project
+
+# Wallboard
+#   teamAtSonarSource drives in which wallboard the alerting will be sent
+#   platform , language, infra
 wallboard.teamAtSonarSource=platform
+
+type=oss
