--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
     <sonar.exclusions>**/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java</sonar.exclusions>
+
+    <!-- deployment to SonarSource Artifactory -->
+    <gitRepositoryName>orchestrator</gitRepositoryName>
+    <artifactory.url>https://repox.sonarsource.com</artifactory.url>
+    <artifactory.repo>sonarsource-public-releases</artifactory.repo>
+    <artifactory.snapshot.repo>sonarsource-public-snapshots</artifactory.snapshot.repo>
   </properties>
 
   <modules>
@@ -116,6 +122,85 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>deploy-artifactory</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-scm-repo-property</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireProperty>
+                      <property>gitRepositoryName</property>
+                      <message>You must set name of Git repository in your pom</message>
+                    </requireProperty>
+                  </rules>
+                  <fail>true</fail>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.jfrog.buildinfo</groupId>
+            <artifactId>artifactory-maven-plugin</artifactId>
+            <version>2.4.0</version>
+            <inherited>false</inherited>
+            <executions>
+              <execution>
+                <id>build-info</id>
+                <goals>
+                  <goal>publish</goal>
+                </goals>
+                <configuration>
+                  <artifactory>
+                    <envVarsExcludePatterns>
+                      *password*,*PASSWORD*,*secret*,*MAVEN_CMD_LINE_ARGS*,sun.java.command,*token*,*TOKEN*,*LOGIN*,*login*
+                    </envVarsExcludePatterns>
+                    <includeEnvVars>true</includeEnvVars>
+                    <timeoutSec>60</timeoutSec>
+                  </artifactory>
+                  <deployProperties>
+                    <vcs.revision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcs.revision>
+                    <build.name>${gitRepositoryName}</build.name>
+                    <build.number>{{TRAVIS_BUILD_NUMBER|BUILD_ID}}</build.number>
+                  </deployProperties>
+                  <licenses>
+                    <autoDiscover>true</autoDiscover>
+                    <includePublishedArtifacts>false</includePublishedArtifacts>
+                    <runChecks>true</runChecks>
+                    <scopes>project,provided</scopes>
+                    <violationRecipients>licences-control@sonarsource.com</violationRecipients>
+                  </licenses>
+                  <publisher>
+                    <contextUrl>${artifactory.url}</contextUrl>
+                    <username>${artifactory.deploy.username}</username>
+                    <password>${artifactory.deploy.password}</password>
+                    <repoKey>${artifactory.repo}</repoKey>
+                    <snapshotRepoKey>${artifactory.snapshot.repo}</snapshotRepoKey>
+                    <publishBuildInfo>true</publishBuildInfo>
+                    <publishArtifacts>true</publishArtifacts>
+                  </publisher>
+                  <buildInfo>
+                    <buildName>${gitRepositoryName}</buildName>
+                    <buildNumber>{{TRAVIS_BUILD_NUMBER|BUILD_ID}}</buildNumber>
+                    <buildUrl>{{CI_BUILD_URL|BUILD_URL}}</buildUrl>
+                    <vcsRevision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcsRevision>
+                  </buildInfo>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
 </project>
