Simplify configuration of Maven deployment

--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,6 @@
 
     <!-- deployment to SonarSource Artifactory -->
     <gitRepositoryName>orchestrator</gitRepositoryName>
-    <artifactory.url>https://repox.sonarsource.com</artifactory.url>
-    <artifactory.repo>sonarsource-public-releases</artifactory.repo>
-    <artifactory.snapshot.repo>sonarsource-public-snapshots</artifactory.snapshot.repo>
   </properties>
 
   <modules>
@@ -141,6 +138,18 @@
                       <property>gitRepositoryName</property>
                       <message>You must set name of Git repository in your pom</message>
                     </requireProperty>
+                    <requireEnvironmentVariable>
+                      <variableName>ARTIFACTORY_URL</variableName>
+                    </requireEnvironmentVariable>
+                    <requireEnvironmentVariable>
+                      <variableName>ARTIFACTORY_REPO</variableName>
+                    </requireEnvironmentVariable>
+                    <requireEnvironmentVariable>
+                      <variableName>ARTIFACTORY_USERNAME</variableName>
+                    </requireEnvironmentVariable>
+                    <requireEnvironmentVariable>
+                      <variableName>ARTIFACTORY_PASSWORD</variableName>
+                    </requireEnvironmentVariable>
                   </rules>
                   <fail>true</fail>
                 </configuration>
@@ -148,6 +157,8 @@
             </executions>
           </plugin>
           <plugin>
+            <!-- this maven plugin is not deployed in Maven Central. It should be downloaded
+            from JFrog JCenter or from SonarSource repositories -->
             <groupId>org.jfrog.buildinfo</groupId>
             <artifactId>artifactory-maven-plugin</artifactId>
             <version>2.4.0</version>
@@ -170,7 +181,7 @@
                     <vcs.revision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcs.revision>
                     <vcs.branch>{{GIT_BRANCH|TRAVIS_BRANCH}}</vcs.branch>
                     <build.name>${gitRepositoryName}</build.name>
-                    <build.number>{{TRAVIS_BUILD_NUMBER|BUILD_ID}}</build.number>
+                    <build.number>{{BUILD_ID|TRAVIS_BUILD_NUMBER}}</build.number>
                   </deployProperties>
                   <licenses>
                     <autoDiscover>true</autoDiscover>
@@ -180,17 +191,16 @@
                     <violationRecipients>licences-control@sonarsource.com</violationRecipients>
                   </licenses>
                   <publisher>
-                    <contextUrl>${artifactory.url}</contextUrl>
-                    <username>${artifactory.deploy.username}</username>
-                    <password>${artifactory.deploy.password}</password>
-                    <repoKey>${artifactory.repo}</repoKey>
-                    <snapshotRepoKey>${artifactory.snapshot.repo}</snapshotRepoKey>
+                    <contextUrl>${env.ARTIFACTORY_URL}</contextUrl>
+                    <repoKey>${env.ARTIFACTORY_REPO}</repoKey>
+                    <username>${env.ARTIFACTORY_USERNAME}</username>
+                    <password>${env.ARTIFACTORY_PASSWORD}</password>
                     <publishBuildInfo>true</publishBuildInfo>
                     <publishArtifacts>true</publishArtifacts>
                   </publisher>
                   <buildInfo>
                     <buildName>${gitRepositoryName}</buildName>
-                    <buildNumber>{{TRAVIS_BUILD_NUMBER|BUILD_ID}}</buildNumber>
+                    <buildNumber>{{BUILD_ID|TRAVIS_BUILD_NUMBER}}</buildNumber>
                     <buildUrl>{{CI_BUILD_URL|BUILD_URL}}</buildUrl>
                     <vcsRevision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcsRevision>
                   </buildInfo>
