--- a/echo/pom.xml
+++ b/echo/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sonarsource.orchestrator</groupId>
     <artifactId>orchestrator-parent</artifactId>
-    <version>3.9-SNAPSHOT</version>
+    <version>3.9</version>
   </parent>
   <artifactId>echo</artifactId>
   <name>Echo Program</name>
