--- a/sonar-orchestrator/pom.xml
+++ b/sonar-orchestrator/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sonarsource.orchestrator</groupId>
     <artifactId>orchestrator-parent</artifactId>
-    <version>3.10.1</version>
+    <version>3.11-SNAPSHOT</version>
   </parent>
   <artifactId>sonar-orchestrator</artifactId>
   <name>Orchestrator</name>
