--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,16 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.5.201505241946</version>
+        <configuration>
+          <includes>
+            <include>com.sonar.orchestrator.*</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -99,7 +109,7 @@
         <dependency>
           <groupId>org.sonarsource.java</groupId>
           <artifactId>sonar-jacoco-listeners</artifactId>
-          <version>3.10</version>
+          <version>3.11</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
