--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonarsource.parent</groupId>
@@ -23,7 +25,9 @@
     <jacoco.version>0.7.6.201602180812</jacoco.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
-    <sonar.exclusions>**/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java,target/generated-sources/**/*</sonar.exclusions>
+    <sonar.exclusions>
+      **/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java,target/generated-sources/**/*
+    </sonar.exclusions>
 
     <!-- used for deployment to SonarSource Artifactory -->
     <gitRepositoryName>orchestrator</gitRepositoryName>
@@ -49,7 +53,7 @@
     <url>https://github.com/SonarSource/orchestrator</url>
     <tag>HEAD</tag>
   </scm>
-  
+
   <issueManagement>
     <system>JIRA</system>
     <url>https://jira.sonarsource.com/browse/ORCH</url>
@@ -78,110 +82,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <!--
-      this profile currently duplicates parent pom because of this limitation with module orchestrator-maven-plugin:
-      https://github.com/JFrogDev/build-info/issues/72
-      -->
-      <id>deploy-sonarsource</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>enforce-deploy-settings</id>
-                <goals>
-                  <goal>enforce</goal>
-                </goals>
-                <configuration>
-                  <rules>
-                    <requireProperty>
-                      <property>gitRepositoryName</property>
-                      <message>You must set name of Git repository in your pom</message>
-                    </requireProperty>
-                    <requireEnvironmentVariable>
-                      <variableName>ARTIFACTORY_URL</variableName>
-                    </requireEnvironmentVariable>
-                    <requireEnvironmentVariable>
-                      <variableName>ARTIFACTORY_DEPLOY_REPO</variableName>
-                    </requireEnvironmentVariable>
-                    <requireEnvironmentVariable>
-                      <variableName>ARTIFACTORY_DEPLOY_USERNAME</variableName>
-                    </requireEnvironmentVariable>
-                    <requireEnvironmentVariable>
-                      <variableName>ARTIFACTORY_DEPLOY_PASSWORD</variableName>
-                    </requireEnvironmentVariable>
-                  </rules>
-                  <fail>true</fail>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <!-- this maven plugin is not deployed in Maven Central. It should be downloaded
-            from JFrog JCenter or from SonarSource repositories -->
-            <groupId>org.jfrog.buildinfo</groupId>
-            <artifactId>artifactory-maven-plugin</artifactId>
-            <version>2.4.0</version>
-
-            <!-- trick for https://github.com/JFrogDev/build-info/issues/72 -->
-            <inherited>false</inherited>
-
-            <executions>
-              <execution>
-                <id>build-info</id>
-                <goals>
-                  <goal>publish</goal>
-                </goals>
-                <configuration>
-                  <artifactory>
-                    <envVarsExcludePatterns>
-                      *password*,*PASSWORD*,*secret*,*MAVEN_CMD_LINE_ARGS*,sun.java.command,*token*,*TOKEN*,*LOGIN*,*login*
-                    </envVarsExcludePatterns>
-                    <includeEnvVars>true</includeEnvVars>
-                    <timeoutSec>60</timeoutSec>
-                  </artifactory>
-                  <deployProperties>
-                    <vcs.revision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcs.revision>
-                    <vcs.branch>{{GIT_BRANCH|TRAVIS_BRANCH}}</vcs.branch>
-                    <build.name>${gitRepositoryName}</build.name>
-                    <build.number>{{BUILD_ID|TRAVIS_BUILD_NUMBER}}</build.number>
-                  </deployProperties>
-                  <licenses>
-                    <autoDiscover>true</autoDiscover>
-                    <includePublishedArtifacts>false</includePublishedArtifacts>
-                    <runChecks>true</runChecks>
-                    <scopes>project,provided</scopes>
-                    <violationRecipients>licences-control@sonarsource.com</violationRecipients>
-                  </licenses>
-                  <publisher>
-                    <contextUrl>${env.ARTIFACTORY_URL}</contextUrl>
-                    <repoKey>${env.ARTIFACTORY_DEPLOY_REPO}</repoKey>
-                    <username>${env.ARTIFACTORY_DEPLOY_USERNAME}</username>
-                    <password>${env.ARTIFACTORY_DEPLOY_PASSWORD}</password>
-                    <publishBuildInfo>true</publishBuildInfo>
-                    <publishArtifacts>true</publishArtifacts>
-                    <excludePatterns>*echo*</excludePatterns>
-                    <filterExcludedArtifactsFromBuild>true</filterExcludedArtifactsFromBuild>
-                  </publisher>
-                  <buildInfo>
-                    <buildName>${gitRepositoryName}</buildName>
-                    <buildNumber>{{BUILD_ID|TRAVIS_BUILD_NUMBER}}</buildNumber>
-                    <buildUrl>{{CI_BUILD_URL|BUILD_URL}}</buildUrl>
-                    <vcsRevision>{{GIT_COMMIT|TRAVIS_COMMIT}}</vcsRevision>
-                  </buildInfo>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-  </profiles>
 
 </project>
