ORCH-383 Drop support of plugin dependencies

--- a/orchestrator.properties
+++ b/orchestrator.properties
@@ -10,15 +10,11 @@
 # - Simple variable interpolation is supported, for example sonar.jdbc.username=user-${jenkinsSlave}
  
 # Version of SonarQube, for example "4.2" or "4.3-SNAPSHOT".
-# Aliases are also supported :
-# - DEV, LTS, LATEST_RELEASE for fixed versions
-# - LTS_OR_OLDEST_COMPATIBLE only when version of main plugin is fixed.
+# Aliases are also supported : DEV, LTS, LATEST_RELEASE
 sonar.runtimeVersion=LTS
 
 # Version of plugins, for example "1.1" or "1.2-SNAPSHOT".
-# Supported aliases are:
-# - DEV or LATEST_RELEASE for fixed versions
-# - OLDEST_COMPATIBLE when sonar.runtimeVersion is fixed and when OrchestratorBuilder::setMainPluginKey() is set in tests
+# Supported aliases are DEV or LATEST_RELEASE
 cobolVersion=DEV
 cppVersion=DEV
 csharpVersion=DEV
