ORCH-395 Drop dependency on Guava
and remove coupling with commons-lang/commons-io, even
these libraries can't be dropped.

--- a/sonar-orchestrator/pom.xml
+++ b/sonar-orchestrator/pom.xml
@@ -55,8 +55,8 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <!-- use the same version than in sonar -->
       <version>${guava.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
