--- a/sonar-orchestrator-osgi/pom.xml
+++ b/sonar-orchestrator-osgi/pom.xml
@@ -22,58 +22,6 @@
           <artifactId>junit</artifactId>
           <groupId>junit</groupId>
         </exclusion>
-        <exclusion>
-          <artifactId>sonar-ws-client</artifactId>
-          <groupId>org.codehaus.sonar</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>httpclient</artifactId>
-          <groupId>org.apache.httpcomponents</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-io</artifactId>
-          <groupId>commons-io</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-lang</artifactId>
-          <groupId>commons-lang</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>commons-codec</artifactId>
-          <groupId>commons-codec</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>guava</artifactId>
-          <groupId>com.google.guava</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>httpmime</artifactId>
-          <groupId>org.apache.httpcomponents</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>logback-core</artifactId>
-          <groupId>ch.qos.logback</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>log4j-over-slf4j</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>logback-classic</artifactId>
-          <groupId>ch.qos.logback</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>jcl-over-slf4j</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>slf4j-api</artifactId>
-          <groupId>org.slf4j</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>google-collections</artifactId>
-          <groupId>com.google.collections</groupId>
-        </exclusion>
       </exclusions>
     </dependency>
   </dependencies>
@@ -96,13 +44,7 @@
               com.sonar.orchestrator.*;version="${project.version}"
             </_exportcontents>
             <Require-Bundle>
-              org.junit;bundle-version="4.11",
-              org.codehaus.sonar.ws-client;bundle-version="${sonarWsClient.version}",
-              org.apache.commons.lang;bundle-version="${commonsLang.version}",
-              org.apache.commons.io;bundle-version="${commonsIO.version}",
-              slf4j.api;bundle-version="${slf4j.version}",
-              org.apache.httpcomponents.httpclient;bundle-version="${httpclient.version}",
-              org.apache.httpcomponents.httpcore;bundle-version="${httpclient.version}"
+              org.junit;bundle-version="4.11"
             </Require-Bundle>
             <Bundle-ClassPath>{maven-dependencies}</Bundle-ClassPath>
             <Embed-Transitive>true</Embed-Transitive>
