ORCH-397 Missing exported packages

--- a/sonar-orchestrator-osgi/pom.xml
+++ b/sonar-orchestrator-osgi/pom.xml
@@ -52,6 +52,7 @@
             <_exportcontents>
               com.sonar.orchestrator.*;version="${project.version}",
               org.sonar.wsclient.*;version="${sonarWsClient.version}",
+              org.sonarqube.ws.*;version="${sonar-ws.version}",
               org.sonarqube.ws.client.*;version="${sonar-ws.version}"
             </_exportcontents>
             <Require-Bundle>
