--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
-    <jacoco.version>0.7.6.201602180812</jacoco.version>
+    <jacoco.version>0.7.9</jacoco.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
     <sonar.exclusions>
