--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
-    <jacoco.version>0.8.1</jacoco.version>
+    <jacoco.version>0.8.4</jacoco.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
     <sonar.exclusions>
@@ -55,6 +55,8 @@
     <gitRepositoryName>orchestrator</gitRepositoryName>
     <!-- required for deployment (no wagon hack in settings.xml). Parent 26 still declares 3.0.5. -->
     <maven.min.version>3.2</maven.min.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
   </properties>
 
   <build>
