--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <jacoco.version>0.8.4</jacoco.version>
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
+    <version.javadoc.plugin>3.1.0</version.javadoc.plugin>
     <sonar.exclusions>
       **/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java,target/generated-sources/**/*
     </sonar.exclusions>
