--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
     <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
     <jacoco.version>0.8.4</jacoco.version>
-    <junit.version>4.12</junit.version>
+    <junit4.version>4.13.2</junit4.version>
+    <junit5.version>5.9.1</junit5.version>
     <slf4j.version>1.7.2</slf4j.version>
     <version.javadoc.plugin>3.1.0</version.javadoc.plugin>
     <sonar.exclusions>
