--- a/pom.xml
+++ b/pom.xml
@@ -44,18 +44,15 @@
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
-    <jacoco.version>0.8.4</jacoco.version>
     <junit.version>4.13.1</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
-    <version.javadoc.plugin>3.1.0</version.javadoc.plugin>
+    <version.jacoco.plugin>0.8.10</version.jacoco.plugin>
     <sonar.exclusions>
       **/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java,target/generated-sources/**/*
     </sonar.exclusions>
 
     <!-- used for deployment to SonarSource Artifactory -->
     <gitRepositoryName>orchestrator</gitRepositoryName>
-    <!-- required for deployment (no wagon hack in settings.xml). Parent 26 still declares 3.0.5. -->
-    <maven.min.version>3.2</maven.min.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <maven.compiler.release>8</maven.compiler.release>
@@ -85,7 +82,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.version}</version>
+        <version>${version.jacoco.plugin}</version>
         <configuration>
           <excludes>
             <exclude>**/*.zip</exclude>
