fixup! Fix JaCoCo reporting

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${version.jacoco.plugin}</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*.zip</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
