NO-JIRA remove the mentions of dogfood and maintenance branches in cirrus config file

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,7 +26,7 @@ eks_container:
   namespace: default
 
 only_sonarsource_qa: &ONLY_SONARSOURCE_QA
-  only_if: $CIRRUS_USER_COLLABORATOR == 'true' && ($CIRRUS_PR != "" || $CIRRUS_BRANCH == "master" || $CIRRUS_BRANCH =~ "branch-.*" || $CIRRUS_BRANCH =~ "dogfood-on-.*")
+  only_if: $CIRRUS_USER_COLLABORATOR == 'true' && ($CIRRUS_PR != "" || $CIRRUS_BRANCH == "master")
 
 build_task:
   eks_container:
