--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,6 @@
   <properties>
     <license.name>GNU LGPL v3</license.name>
     <version.surefire.plugin>3.5.2</version.surefire.plugin>
-    <guava.version>18.0</guava.version>
-    <junit.version>4.13.2</junit.version>
     <slf4j.version>2.0.17</slf4j.version>
     <version.jacoco.plugin>0.8.12</version.jacoco.plugin>
     <sonar.exclusions>
@@ -84,12 +82,19 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>3.9.1</version>
+        <version>3.27.6</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>5.16.0</version>
+        <version>5.20.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.13.4</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
