--- a/sonar-orchestrator-junit4/pom.xml
+++ b/sonar-orchestrator-junit4/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
+      <version>4.13.2</version>
     </dependency>
     <dependency>
       <groupId>org.sonarsource.orchestrator</groupId>
